--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
+
 <body>
     <h1>home</h1>
 </body>
+
 </html>
