--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -1,4 +1,5 @@
 {% extends 'base.html'%}
+{% load hitcount_tags %}
 {% load static %}
 {% block content%}
 
@@ -41,10 +42,11 @@
 						<div class="user-details row">
 							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span
 									class="lnr lnr-user"></span></p>
-							<p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span
+							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
-							<p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span
-									class="lnr lnr-eye"></span></p>
+							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views:</a>
+								<span class="lnr lnr-eye"></span>
+							</p>
 							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
 									class="lnr lnr-bubble"></span></p>
 							<ul class="social-links col-lg-12 col-md-12 col-6">
@@ -56,53 +58,17 @@
 						</div>
 					</div>
 					<div class="col-lg-9 col-md-9">
-						<h3 class="mt-20 mb-20">Astronomy Binoculars A Great Alternative</h3>
+						<h3 class="mt-20 mb-20">{{post.title}}</h3>
 						<p class="excert">
-							MCSE boot camps have its supporters and its detractors. Some people do not understand why
-							you should have to spend money on boot camp when you can get the MCSE study materials
-							yourself at a fraction.
-						</p>
-						<p>
-							Boot camps have its supporters and its detractors. Some people do not understand why you
-							should have to spend money on boot camp when you can get the MCSE study materials yourself
-							at a fraction of the camp price. However, who has the willpower to actually sit through a
-							self-imposed MCSE training. who has the willpower to actually sit through a self-imposed
-						</p>
-						<p>
-							Boot camps have its supporters and its detractors. Some people do not understand why you
-							should have to spend money on boot camp when you can get the MCSE study materials yourself
-							at a fraction of the camp price. However, who has the willpower to actually sit through a
-							self-imposed MCSE training. who has the willpower to actually sit through a self-imposed
+							{{post.content}}
 						</p>
 					</div>
-					<div class="col-lg-12">
-						<div class="quotes">
-							MCSE boot camps have its supporters and its detractors. Some people do not understand why
-							you should have to spend money on boot camp when you can get the MCSE study materials
-							yourself at a fraction of the camp price. However, who has the willpower to actually sit
-							through a self-imposed MCSE training.
+					<div class="row mt-30 mb-30">
+						<div class="col-6">
+							<img class="img-fluid" src="{% static 'img/blog/post-img1.jpg' %}" alt="">
 						</div>
-						<div class="row mt-30 mb-30">
-							<div class="col-6">
-								<img class="img-fluid" src="{% static 'img/blog/post-img1.jpg' %}" alt="">
-							</div>
-							<div class="col-6">
-								<img class="img-fluid" src="{% static 'img/blog/post-img2.jpg' %}" alt="">
-							</div>
-							<div class="col-lg-12 mt-30">
-								<p>
-									MCSE boot camps have its supporters and its detractors. Some people do not
-									understand why you should have to spend money on boot camp when you can get the MCSE
-									study materials yourself at a fraction of the camp price. However, who has the
-									willpower.
-								</p>
-								<p>
-									MCSE boot camps have its supporters and its detractors. Some people do not
-									understand why you should have to spend money on boot camp when you can get the MCSE
-									study materials yourself at a fraction of the camp price. However, who has the
-									willpower.
-								</p>
-							</div>
+						<div class="col-6">
+							<img class="img-fluid" src="{% static 'img/blog/post-img2.jpg' %}" alt="">
 						</div>
 					</div>
 				</div>
