--- a/templates/test.html
+++ b/templates/test.html
@@ -1,3 +1,4 @@
+{% load custom_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <p>{{name}}</p>
-    <p>{{family_name}}</p>
-    <p>{{age}}</p>
+    {%for post in posts%}
+    <h1>{{post.published_date}}</h1>
+    <small>{{now}}</small>
+    {%subtract post.published_date now as time%}
+    <small>{{time}}</small>
+    {%if time %}
+    <samll>this is the {{time.Hours}}</samll>
+    {%endif%}
+    {%endfor%}
 </body>
 </html>
