--- a/templates/base.html
+++ b/templates/base.html
@@ -64,12 +64,7 @@
                     <ul class="nav-menu">
                         <li><a href="{% url 'website:index'%}">Home</a></li>
                         <li><a href="{% url 'website:about'%}">About</a></li>
-                        <li class="menu-has-children"><a href="">Blog</a>
-                            <ul>
-                                <li><a href="{% url 'blog:blog'%}">Blog Home</a></li>
-                                <li><a href="{% url 'blog:detail'%}">Blog Single</a></li>
-                            </ul>
-                        </li>                        
+                        <li><a href="{% url 'blog:blog'%}">Blog</a></li>                        
                         <li><a href="{% url 'website:contact'%}">Contact</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
