--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -117,13 +117,13 @@
 						<div class="feature-img">
 							<img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg' %}" alt="">
 						</div>
-						<a class="posts-title" href="{% url 'blog:detail' %}">
+						<a class="posts-title" href="{% url 'blog:detail' pk=post.id %}">
 							<h3>{{post.title}}</h3>
 						</a>
 						<p class="excert">
 							{{post.content}}
 						</p>
-						<a href="{% url 'blog:detail' %}" class="primary-btn">View More</a>
+						<a href="{% url 'blog:detail' pk=post.id %}" class="primary-btn">View More</a>
 					</div>
 				</div>
 				{%endif%}
