--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -10,11 +10,11 @@
 		<div class="row d-flex align-items-center justify-content-center">
 			<div class="about-content col-lg-12">
 				<h1 class="text-white">
-					Blog Details Page
+					{{post.title}}
 				</h1>
-				<p class="text-white link-nav"><a href="index.html">Home </a> <span
-						class="lnr lnr-arrow-right"></span><a href="blog-home.html">Blog </a> <span
-						class="lnr lnr-arrow-right"></span> <a href="blog-single.html"> Blog Details Page</a></p>
+				<p class="text-white link-nav"><a href="{% url 'website:index'%}">Home </a> <span
+						class="lnr lnr-arrow-right"></span><a href="{% url 'blog:blog'%}">Blog </a> <span
+						class="lnr lnr-arrow-right"></span> {{post.title}}</a></p>
 			</div>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 									class="lnr lnr-user"></span></p>
 							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
-							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views:</a>
+							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views:{% get_hit_count for post%}</a>
 								<span class="lnr lnr-eye"></span>
 							</p>
 							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
@@ -62,15 +62,6 @@
 						<p class="excert">
 							{{post.content}}
 						</p>
-					</div>
-					<div class="row mt-30 mb-30">
-						<div class="col-6">
-							<img class="img-fluid" src="{% static 'img/blog/post-img1.jpg' %}" alt="">
-						</div>
-						<div class="col-6">
-							<img class="img-fluid" src="{% static 'img/blog/post-img2.jpg' %}" alt="">
-						</div>
-					</div>
 				</div>
 				<div class="navigation-area">
 					<div class="row">
