published time and views count

--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -102,7 +102,7 @@
 									class="lnr lnr-user"></span></p>
 							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
-							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views: {% get_hit_count for post%}</a> <span
+							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views: {{post.conted_vies}}</a> <span
 									class="lnr lnr-eye"></span></p>
 							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
 									class="lnr lnr-bubble"></span></p>
