--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -10,11 +10,11 @@
 		<div class="row d-flex align-items-center justify-content-center">
 			<div class="about-content col-lg-12">
 				<h1 class="text-white">
-					{{post.title}}
+					{{posts.title}}
 				</h1>
 				<p class="text-white link-nav"><a href="{% url 'website:index'%}">Home </a> <span
 						class="lnr lnr-arrow-right"></span><a href="{% url 'blog:blog'%}">Blog </a> <span
-						class="lnr lnr-arrow-right"></span> {{post.title}}</a></p>
+						class="lnr lnr-arrow-right"></span> {{posts.title}}</a></p>
 			</div>
 		</div>
 	</div>
@@ -29,7 +29,7 @@
 				<div class="single-post row">
 					<div class="col-lg-12">
 						<div class="feature-img">
-							<img class="img-fluid" src="{{post.image.url}}" alt="">
+							<img class="img-fluid" src="{{posts.image.url}}" alt="">
 						</div>
 					</div>
 					<div class="col-lg-3  col-md-3 meta-details">
@@ -40,11 +40,11 @@
 							<li><a href="#">Lifestyle</a></li>
 						</ul>
 						<div class="user-details row">
-							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span
+							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{posts.author.get_full_name}}</a> <span
 									class="lnr lnr-user"></span></p>
-							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span
+							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{posts.published_date}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
-							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views:{% get_hit_count for post%}</a>
+							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views: {{posts.conted_vies}}</a>
 								<span class="lnr lnr-eye"></span>
 							</p>
 							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
@@ -58,9 +58,9 @@
 						</div>
 					</div>
 					<div class="col-lg-9 col-md-9">
-						<h3 class="mt-20 mb-20">{{post.title}}</h3>
+						<h3 class="mt-20 mb-20">{{posts.title}}</h3>
 						<p class="excert">
-							{{post.content}}
+							{{posts.content}}
 						</p>
 					</div>
 					<div class="navigation-area">
