improve latest posts and categories section
defined function for latest posts and categories in costume template tag and used them to show in their section

--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -44,7 +44,8 @@
 						<div class="user-details row">
 							<p class="user-name col-lg-12 col-md-12 col-6"><a
 									href="#">{{posts.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
-							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{posts.published_date|date:'d/M/Y'}}</a> <span
+							<p class="date col-lg-12 col-md-12 col-6"><a
+									href="#">{{posts.published_date|date:'d/M/Y'}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
 							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views: {{posts.conted_vies}}</a>
 								<span class="lnr lnr-eye"></span>
@@ -74,27 +75,27 @@
 					</div>
 					-->
 					<ul class="pager">
-						{% if  previous and not previous.status %}
-						{% countP previous as count %}	
-							<li class="previous">
-								 <a href="{% url 'blog:detail' pk=previous.id|sub:count %}">&larr; Previous Post</a>
-							</li>
+						{% if previous and previous.status %}
+						<li class="previous">
+							<a href="{% url 'blog:detail' pk=previous.id %}">&larr; Previous Post</a>
+						</li>
 						{% endif %}
-						{% if  previous and previous.status %}					
-							<li class="previous">
-								 <a href="{% url 'blog:detail' pk=previous.id %}">&larr; Previous Post</a>
-							</li>
+						{% if previous and not previous.status %}
+						{% countP previous as count %}
+						<li class="previous">
+							<a href="{% url 'blog:detail' pk=previous.id|sub:count %}">&larr; Previous Post</a>
+						</li>
+						{% endif %}
+						{% if next and next.status %}
+						<li class="next">
+							<a href="{% url 'blog:detail' pk=next.id %}">Next Post &rarr;</a>
+						</li>
 						{% endif %}
 						{% if next and not next.status %}
 						{% countN next as count %}
-							<li class="next">
-								 <a href="{% url 'blog:detail' pk=next.id|add:count %}">Next Post &rarr;</a>
-							</li>
-						{% endif %}
-						{% if next and next.status %}
-							<li class="next">
-								 <a href="{% url 'blog:detail' pk=next.id %}">Next Post &rarr;</a>
-							</li>
+						<li class="next">
+							<a href="{% url 'blog:detail' pk=next.id|add:count %}">Next Post &rarr;</a>
+						</li>
 						{% endif %}
 					</ul>
 					<div class="comments-area">
@@ -231,106 +232,13 @@
 								<button type="submit"><i class="fa fa-search"></i></button>
 							</form>
 						</div>
-							{% include 'blog/blog-writer.html' %}
-						<div class="single-sidebar-widget popular-post-widget">
-							<h4 class="popular-title">Popular Posts</h4>
-							<div class="popular-post-list">
-								<div class="single-post-list d-flex flex-row align-items-center">
-									<div class="thumb">
-										<img class="img-fluid" src="{% static 'img/blog/pp1.jpg' %}" alt="">
-									</div>
-									<div class="details">
-										<a href="blog-single.html">
-											<h6>Space The Final Frontier</h6>
-										</a>
-										<p>02 Hours ago</p>
-									</div>
-								</div>
-								<div class="single-post-list d-flex flex-row align-items-center">
-									<div class="thumb">
-										<img class="img-fluid" src="{% static 'img/blog/pp2.jpg' %}" alt="">
-									</div>
-									<div class="details">
-										<a href="blog-single.html">
-											<h6>The Amazing Hubble</h6>
-										</a>
-										<p>02 Hours ago</p>
-									</div>
-								</div>
-								<div class="single-post-list d-flex flex-row align-items-center">
-									<div class="thumb">
-										<img class="img-fluid" src="{% static 'img/blog/pp3.jpg' %}" alt="">
-									</div>
-									<div class="details">
-										<a href="blog-single.html">
-											<h6>Astronomy Or Astrology</h6>
-										</a>
-										<p>02 Hours ago</p>
-									</div>
-								</div>
-								<div class="single-post-list d-flex flex-row align-items-center">
-									<div class="thumb">
-										<img class="img-fluid" src="{% static 'img/blog/pp4.jpg' %}" alt="">
-									</div>
-									<div class="details">
-										<a href="blog-single.html">
-											<h6>Asteroids telescope</h6>
-										</a>
-										<p>02 Hours ago</p>
-									</div>
-								</div>
-							</div>
-						</div>
+						{% include 'blog/blog-writer.html' %}
+						
+						{% latestposts %}
 						<div class="single-sidebar-widget ads-widget">
 							<a href="#"><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg' %}" alt=""></a>
 						</div>
-						<div class="single-sidebar-widget post-category-widget">
-							<h4 class="category-title">Post Catgories</h4>
-							<ul class="cat-list">
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Technology</p>
-										<p>37</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Lifestyle</p>
-										<p>24</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Fashion</p>
-										<p>59</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Art</p>
-										<p>29</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Food</p>
-										<p>15</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Architecture</p>
-										<p>09</p>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="d-flex justify-content-between">
-										<p>Adventure</p>
-										<p>44</p>
-									</a>
-								</li>
-							</ul>
-						</div>
+						{% postcategories %}
 						<div class="single-sidebar-widget newsletter-widget">
 							<h4 class="newsletter-title">Newsletter</h4>
 							<p>
