--- a/statics/css/main.css
+++ b/statics/css/main.css
@@ -3655,7 +3655,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .widget-wrap .popular-post-widget .popular-post-list .thumb img {
-  width: 100%;
+  width: 70px;
+  height: 50px;
 }
 
 .widget-wrap .popular-post-widget .single-post-list {
