filtering the blog posts
filter by:
author name
categories
search

--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -99,11 +99,11 @@
 							{{post.category.all|join:', '}}
 							-->
 							{% for cat in post.category.all %}
-								<a>{{cat.name}}</a>{% if not forloop.last %},{% endif %}
+								<li><a href="{% url 'blog:category' cat_name=cat.name %}">{{cat.name}}</a>{% if not forloop.last %},{% endif %}</li>
 							{% endfor %}
 						</ul>
 						<div class="user-details row">
-							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span
+							<p class="user-name col-lg-12 col-md-12 col-6"><a href="{% url 'blog:author' author_username=post.author.username %}">{{post.author.get_full_name}}</a> <span
 									class="lnr lnr-user"></span></p>
 							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:'d/M/Y'}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
@@ -153,13 +153,7 @@
 			</div>
 			<div class="col-lg-4 sidebar-widgets">
 				<div class="widget-wrap">
-					<div class="single-sidebar-widget search-widget">
-						<form class="search-form" action="#">
-							<input placeholder="Search Posts" name="search" type="text" onfocus="this.placeholder = ''"
-								onblur="this.placeholder = 'Search Posts'">
-							<button type="submit"><i class="fa fa-search"></i></button>
-						</form>
-					</div>
+					    {% include 'blog/blog-search.html' %}
 						{% include 'blog/blog-writer.html' %}
 						{% latestposts 4 %}
 					
