--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -36,14 +36,13 @@
 					</div>
 					<div class="col-lg-3  col-md-3 meta-details">
 						<ul class="tags">
-							<li><a href="#">Food,</a></li>
-							<li><a href="#">Technology,</a></li>
-							<li><a href="#">Politics,</a></li>
-							<li><a href="#">Lifestyle</a></li>
+							{% for cat in posts.category.all %}
+								<li><a href="{% url 'blog:category' cat_name=cat.name %}">{{cat.name}}</a>{% if not forloop.last %},{% endif %}</li>
+							{% endfor %}
 						</ul>
 						<div class="user-details row">
 							<p class="user-name col-lg-12 col-md-12 col-6"><a
-									href="#">{{posts.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
+									href=" ">{{posts.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
 							<p class="date col-lg-12 col-md-12 col-6"><a
 									href="#">{{posts.published_date|date:'d/M/Y'}}</a> <span
 									class="lnr lnr-calendar-full"></span></p>
@@ -225,13 +224,7 @@
 				</div>
 				<div class="col-lg-4 sidebar-widgets">
 					<div class="widget-wrap">
-						<div class="single-sidebar-widget search-widget">
-							<form class="search-form" action="#">
-								<input placeholder="Search Posts" name="search" type="text"
-									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Posts'">
-								<button type="submit"><i class="fa fa-search"></i></button>
-							</form>
-						</div>
+						{% include 'blog/blog-search.html' %}
 						{% include 'blog/blog-writer.html' %}
 						
 						{% latestposts %}
