--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -56,8 +56,9 @@
 				</div>
 			</div>
 			<div class="col-lg-8">
-				<form class="form-area contact-form text-right" id="myForm" action="mail.php" method="post">
+				<form class="form-area contact-form text-right" action="{% url 'website:contact' %}" method="post">
 					<div class="row">
+						{% csrf_token%}
 						<div class="col-lg-6 form-group">
 							<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
 								onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control"
@@ -70,20 +71,20 @@
 
 							<input name="subject" placeholder="Enter subject" onfocus="this.placeholder = ''"
 								onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control"
-								required="" type="text">
+							    type="text">
 						</div>
 						<div class="col-lg-6 form-group">
-							<textarea class="common-textarea form-control" name="message" placeholder="Enter Messege"
+							<textarea class="common-textarea form-control" name="content" placeholder="Enter Messege"
 								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'"
 								required=""></textarea>
 						</div>
 						<div class="col-lg-12">
 							<div class="alert-msg" style="text-align: left;"></div>
-							<button class="genric-btn primary" style="float: right;">Send Message</button>
+							<button type='submit' class="genric-btn primary" style="float: right;">Send Message</button>
 						</div>
 					</div>
 				</form>
-			</div>
+			</div>			
 		</div>
 	</div>
 </section>
