--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -62,7 +62,7 @@
 					<div class="col-lg-9 col-md-9">
 						<h3 class="mt-20 mb-20">{{posts.title}}</h3>
 						<p class="excert">
-							{{posts.content}}
+							{{posts.content|safe}}
 						</p>
 					</div>
 					<!--
@@ -97,6 +97,30 @@
 						</li>
 						{% endif %}
 					</ul>
+                    
+					<div class="comment-form">
+						<div id="disqus_thread"></div>
+						<script>
+							/**
+							*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+							*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+							/*
+							var disqus_config = function () {
+							this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+							this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+							};
+							*/
+							(function() { // DON'T EDIT BELOW THIS LINE
+							var d = document, s = d.createElement('script');
+							s.src = 'https://127-0-0-1-8000-al0fdc6kdy.disqus.com/embed.js';
+							s.setAttribute('data-timestamp', +new Date());
+							(d.head || d.body).appendChild(s);
+							})();
+						</script>
+						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+					</div>
+					<!--
 					<div class="comments-area">
 						<h4>05 Comments</h4>
 						<div class="comment-list">
@@ -221,6 +245,8 @@
 							<a href="#" class="primary-btn text-uppercase">Post Comment</a>
 						</form>
 					</div>
+					-->
+
 				</div>
 				<div class="col-lg-4 sidebar-widgets">
 					<div class="widget-wrap">
@@ -257,23 +283,7 @@
 								You can unsubscribe at any time
 							</p>
 						</div>
-						<div class="single-sidebar-widget tag-cloud-widget">
-							<h4 class="tagcloud-title">Tag Clouds</h4>
-							<ul>
-								<li><a href="#">Technology</a></li>
-								<li><a href="#">Fashion</a></li>
-								<li><a href="#">Architecture</a></li>
-								<li><a href="#">Fashion</a></li>
-								<li><a href="#">Food</a></li>
-								<li><a href="#">Technology</a></li>
-								<li><a href="#">Lifestyle</a></li>
-								<li><a href="#">Art</a></li>
-								<li><a href="#">Adventure</a></li>
-								<li><a href="#">Food</a></li>
-								<li><a href="#">Lifestyle</a></li>
-								<li><a href="#">Adventure</a></li>
-							</ul>
-						</div>
+						{% include 'blog/blog-tags.html' %}
 					</div>
 				</div>
 			</div>
