--- a/templates/blog/latest-posts.html
+++ b/templates/blog/latest-posts.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <div class="single-sidebar-widget popular-post-widget">
     <h4 class="popular-title">Popular Posts</h4>
     <div class="popular-post-list">
@@ -11,7 +12,7 @@
                 <a href="{% url 'blog:detail' pk=post.id %}">
                     <h6>{{ post.title}}</h6>
                 </a>
-                <p>{{post.published_date|date:'d M Y'}}</p>
+                <p>{{post.published_date|naturaltime}}</p>
             </div>
         </div>
         {% endfor %}
