--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -78,6 +78,9 @@
 								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'"
 								required=""></textarea>
 						</div>
+			            <div class="py-2">
+							{{form.captcha}}
+						</div>
 						<div class="col-lg-12">
 							<div class="alert-msg" style="text-align: left;"></div>
 							<button type='submit' class="genric-btn primary" style="float: right;">Send Message</button>
