added account app
account app for authentication has been added

--- a/templates/website/home-latest-posts.html
+++ b/templates/website/home-latest-posts.html
@@ -11,7 +11,7 @@
                         <h4>{{posts.title}}</h4>
                     </a>
                     <p>
-                        {{posts.content}}
+                        {{posts.content|safe}}
                     </p>
                 </div>
             </div>
