--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,13 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-sm-6 col-6 header-top-left">
                         <ul>
-                            <li><a href="#">Visit Us</a></li>
-                            <li><a href="#">Buy Tickets</a></li>
+                            {% if request.user.is_authenticated %}
+                            <li><a href="#">login as {{request.user.username}}</a>
+                            <li><a href="{% url 'account:logout' %}">logout</a></li>
+                            {% else %}
+                            <li><a href="{% url 'account:login' %}">login</a></li>
+                            <li><a href="{% url 'account:signup' %}">signup</a></li>
+                            {% endif %}
                         </ul>
                     </div>
                     <div class="col-lg-6 col-sm-6 col-6 header-top-right">
