--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -121,7 +121,7 @@
 							<h3>{{post.title}}</h3>
 						</a>
 						<p class="excert">
-							{{post.content|truncatewords:1}}
+							{{post.content|truncatewords:1|safe}}
 						</p>
 						<a href="{% url 'blog:detail' pk=post.id %}" class="primary-btn">View More</a>
 					</div>
