--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -165,7 +165,12 @@
 							
 							{{form.as_p}}
 						-->
+						
 					        <input type="hidden" name="post" value="{{posts.id}}">
+							{% if request.user.is_authenticated %}
+							<input type="hidden" name="name" value="{{request.user.first_name}}">
+							<input type="hidden" name="email" value="{{request.user.email}}">
+							{% else %}
 							<div class="form-group form-inline">
 								<div class="form-group col-lg-6 col-md-12 name">
 									<input type="text" class="form-control" name="name" placeholder="Enter Name"
@@ -177,6 +182,7 @@
 										onblur="this.placeholder = 'Enter email address'">
 								</div>
 							</div>
+							{% endif %}
 							<div class="form-group">
 								<input type="text" class="form-control" name="subject" placeholder="Subject"
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Subject'">
@@ -186,9 +192,10 @@
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'"
 									required=""></textarea>
 							</div>
-						
+							
 							<button type="submit" class="primary-btn text-uppercase">Post Comment</button>
 						</form>
+						
 					</div>
 					
 
