--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -64,6 +64,14 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <a href="{% url 'account:password_reset' %}"><i>Forgot Password?</i></a>
+      {% if messages %}
+      {% for message in messages %}
+         <div class="text-center alert alert-{{ message.tags }}">
+             {{ message|safe }}
+         </div>
+      {% endfor %}
+      {% endif %}
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
   </body>
